# gitlab-haskell

./: .gitignore  .stan.toml  README.md  gitlab-haskell.cabal  stack.yaml
app/: Main.hs
data/system-hooks/: group-member-updated.json  merge-request.json  new-team-member.json  project-created.json  repository-update.json  team-member-removed.json  team-member-updated.json  user-removed.json
examples/: FileHook.hs
src/: GitLab.hs
src/GitLab/: Types.hs
src/GitLab/API/: #Branches.hs#  Branches.hs  Commits.hs  Discussions.hs  Events.hs  Groups.hs  Issues.hs  Jobs.hs  Members.hs  MergeRequests.hs  Notes.hs  Pipelines.hs  Projects.hs  Repositories.hs  RepositoryFiles.hs  Tags.hs  Todos.hs  Users.hs  Version.hs
src/GitLab/SystemHooks/: GitLabSystemHooks.hs  Rules.hs  Types.hs
src/GitLab/WebRequests/: GitLabWebCalls.hs
tests/: SystemHookTests.hs  Tests.hs
