cabal-version: 1.12
name:           gitlab-haskell
category:       Git
version:        0.1.0.0
synopsis:       A Haskell library for the GitLab web API
description:
  This Haskell library queries and updates the database of a GitLab instance using the GitLab web API: <https://docs.gitlab.com/ee/api/>
  .
  An example that returns projects for which issue creation is enabled is:
  .
  > projectsWithIssuesEnabled :: IO [Project]
  > projectsWithIssuesEnabled = runGitLab myConfig $ filter (issueEnabled . issues_enabled) <$> allProjects
  >   where myConfig = defaultGitLabServer
  >             { url = "https://gitlab.example.com"
  >             , token = "my_access_token" }
  >         issueEnabled Nothing = False
  >         issueEnabled (Just t) = t
  .
  Unsurprisingly, GitLab hosts this Haskell library: <https://gitlab.com/robstewart57/gitlab-haskell>
 
                
homepage:       https://gitlab.com/robstewart57/gitlab-haskell
bug-reports:    https://gitlab.com/robstewart57/gitlab-haskell/issues
author:         Rob Stewart
maintainer:     robstewart57@gmail.com
copyright:      2019 Rob Stewart, Heriot-Watt University
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://gitlab.com/robstewart57/gitlab-haskell

library
  exposed-modules:
                  GitLab
                , GitLab.Types
                , GitLab.API.Groups
                , GitLab.API.Members
                , GitLab.API.Commits
                , GitLab.API.Projects
                , GitLab.API.Users
                , GitLab.API.Issues
                , GitLab.API.Pipelines
                , GitLab.API.Branches
                , GitLab.API.Jobs
                , GitLab.API.Repositories
                , GitLab.API.MergeRequests
                , GitLab.API.RepositoryFiles
  other-modules:
                GitLab.WebRequests.GitLabWebCalls
  hs-source-dirs:
                 src
  build-depends:
                base >=4.7 && <5
              , http-conduit >= 2.3.4
              , connection
              , aeson
              , bytestring
              , text
              , async
              , http-types
              , containers
              , random
              , array
              , time
              , transformers
              , unliftio
              , unliftio-core
  default-language: Haskell2010
